commit css change

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -12,6 +12,9 @@
 
 @import url("../accelerate-theme/style.css");
 
+body{
+  background-color:#e8b6ff;
+}
 .home-page{
   background:url("img/taxi-photo.jpg") no-repeat scroll right center / cover rgba(0, 0, 0, 0);
 }
