--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -13,7 +13,7 @@
 @import url("../accelerate-theme/style.css");
 
 body{
-  background-color:#e8b6ff;
+  background-color:#pink;
 }
 .home-page{
   background:url("img/taxi-photo.jpg") no-repeat scroll right center / cover rgba(0, 0, 0, 0);
